[Parser][QoI] Offer fixit for changing the platform condition kind

For example, for "#if os(simulator)", offer a fixit to change
"os" to "targetEnvironment", instead of offering to change "simulator".

Resolves SR-11037.